--- a/config_.json
+++ b/config_.json
@@ -95,8 +95,9 @@
 		{ "name": "伊豆諸島", "codestart": "354", "codeend": "358" },
 		{ "name": "小笠原地方", "codestart": "359", "codeend": "359" },
 		{ "name": "関東地方", "codestart": "360", "codeend": "369" },
-		{ "name": "北陸地方", "codestart": "370", "codeend": "410" },
-		{ "name": "甲信地方", "codestart": "411", "codeend": "429" },
+		{ "name": "甲信越地方", "codestart": "370", "codeend": "379" },
+		{ "name": "北陸地方", "codestart": "380", "codeend": "409" },
+		{ "name": "甲信越地方", "codestart": "410", "codeend": "429" },
 		{ "name": "東海地方", "codestart": "430", "codeend": "499" },
 		{ "name": "近畿地方", "codestart": "500", "codeend": "559" },
 		{ "name": "中国地方", "codestart": "560", "codeend": "599" },
